fix: "hotel" section mobile layout [<lg]

--- a/app.css
+++ b/app.css
@@ -207,6 +207,10 @@ h1, h2 {
     color: #9cceb6;
 }
 
+.hotel.inv p {
+    color: #fdfdff;
+}
+
 .features{
     color: #9cceb6;
     font-family: proxima-nova, san serif;
@@ -312,6 +316,16 @@ h1, h2 {
     position: relative;
     float: left;
     margin-left: 50px;
+    opacity: 98%;
+    z-index: 9;
+}
+
+#overlap .hotel.inv {
+    background: none;
+    width: 100%;
+    position: relative;
+    float: none;
+    margin-left: 0;
     opacity: 98%;
     z-index: 9;
 }
@@ -850,6 +864,14 @@ footer {
         display: none;
         transform: translateY(-190%) !important;
        }
+    
+    #hItems {
+        font-weight: 200;
+        font-size: 1.05rem;
+        letter-spacing: .1rem;
+        line-height: 4.2rem;
+        margin-top: 0;
+    }
 
 }
 
